--- a/base.css
+++ b/base.css
@@ -13,10 +13,11 @@
 
 :root {
   /* Colors */
+  --theme: #3e7bfc; /* UniveralThemeColor */
   --bg: #f0f0f6; /* Background color for light mode */
   --fg: #17171f; /* Foreground color for light mode */
-  --primary: #009be5; /* Primary color for buttons and links */
-  --primary-hover: #0085d4; /* Hover state for primary color */
+  --primary: #1f55f1; /* Primary color for buttons and links */
+  --primary-hover: #173fde; /* Hover state for primary color */
 
   /* Typography */
   --font-normal: system-ui, sans-serif; /* Default font for normal text */
@@ -32,8 +33,8 @@
 .dark {
   --bg: #121212; /* Background color for dark mode */
   --fg: #e0e0e0; /* Foreground color for dark mode */
-  --primary: #009be5; /* Primary color for buttons and links in dark mode */
-  --primary-hover: #2cbfff; /* Hover state for primary color in dark mode */
+  --primary: #1f55f1; /* Primary color for buttons and links in dark mode */
+  --primary-hover: #3e7bfc; /* Hover state for primary color in dark mode */
 }
 /*
  * ==============================================================
