--- a/src/b_vars.css
+++ b/src/b_vars.css
@@ -9,8 +9,8 @@
   --theme: #3f7bfc; /* UniveralThemeColor */
   --bg: #f0f0f6; /* Background color for light mode */
   --fg: #17171f; /* Foreground color for light mode */
-  --primary: #1f55f1; /* Primary color for buttons and links */
-  --primary-hover: #173fde; /* Hover state for primary color */
+  --primary: #3f7bfc; /* Primary color for buttons and links */
+  --primary-hover: #1f55f1; /* Hover state for primary color */
 
   /* Typography */
   --font-normal: system-ui, sans-serif; /* Default font for normal text */
