--- a/src/a_intro.css
+++ b/src/a_intro.css
@@ -1,7 +1,5 @@
 /*
- * ==============================================================
- * BaseCSS v0.9.0
- * The MIT <https://opensource.org/license/MIT>
+ * BaseCSS v0.9.6
+ * MIT Licensed <https://opensource.org/license/MIT>
  * https://github.com/MFM-347/BaseCSS
- * ==============================================================
 */
