--- a/src/c_reset.css
+++ b/src/c_reset.css
@@ -1,9 +1,8 @@
 /*
- * ==============================================================
- * Reset
- * http://meyerweb.com/eric/tools/css/reset/
- * v2.0 | 20110126 * License: none (public domain)
- * ==============================================================
+ * <Reset
+ *   copyright="http://meyerweb.com/eric/tools/css/reset/"
+ *   info="v2.0 | 20110126 * License: none (public domain)"
+ * >
 */
 
 html,
@@ -130,3 +129,7 @@ table {
   border-collapse: collapse; /* Collapse borders for tables */
   border-spacing: 0; /* Remove spacing between table cells */
 }
+
+/* 
+ * </Reset>
+*/
