--- a/src/a_intro.css
+++ b/src/a_intro.css
@@ -1,5 +1,7 @@
 /*
- * BaseCSS v0.9.6
- * MIT Licensed <https://opensource.org/license/MIT>
- * https://github.com/MFM-347/BaseCSS
+ * <BaseCSS
+ *   version="v0.9.6"
+ *   license="MIT Licensed <https://opensource.org/license/MIT>"
+ *   src="https://github.com/MFM-347/BaseCSS"
+ * >
 */
