--- a/src/b_vars.css
+++ b/src/b_vars.css
@@ -3,13 +3,15 @@
 */
 
 :root {
+  font-family: var(--font-normal); /* Default font family for root element */
   /* Colors */
   --theme: #385cfa; /* Universal theme color */
   --bg: #f0f0f6; /* Background color for light mode */
   --fg: #17171f; /* Foreground color for light mode */
 
   /* Typography */
-  --font-normal: system-ui, sans-serif; /* Default font for normal text elements */
+  --font-normal: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; /* Default font for normal text elements */
   --font-heading: "Gill Sans", sans-serif; /* Default font for heading elements */
   --font-mono: ui-monospace, monospace; /* Default font for mono/code elements */
 
