--- a/src/d_type.css
+++ b/src/d_type.css
@@ -49,7 +49,7 @@ a,
 .text,
 .btn {
   font-family: var(--font-normal); /* Use the normal font variable */
-  font-size: inherit, 16px; /* Inherit font size from parent or default to 16px */
+  font-size: inherit, 18px; /* Inherit font size from parent or default to 16px */
   margin: inherit; /* Inherit margin from parent */
 }
 
@@ -75,7 +75,7 @@ h6,
 .sub-heading {
   font-family: var(--font-heading); /* Use the heading font variable */
   font-weight: inherit, 700; /* Inherit font weight or default to bold */
-  line-height: inherit, 1.25; /* Set line height for readability */
+  line-height: 1.25; /* Set line height for readability */
   margin-bottom: inherit, 10px; /* Bottom margin for spacing */
 }
 
