--- a/src/e_utilities.css
+++ b/src/e_utilities.css
@@ -20,6 +20,14 @@ body {
   max-width: 100vw; /* Prevent the container from exceeding the full viewport width */
   overflow-x: hidden; /* Hide any horizontal overflow to avoid scrollbars */
 }
+/* size full */
+.sf {
+  min-width: 100%;
+  max-height: 100%;
+  overflow-x: hidden;
+  margin: 0;
+  padding: inherit;
+}
 
 /* Center content using grid layout */
 .center {
